--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -38,7 +38,7 @@
 @import 'bootstrap/scss/modal'; // requires transitions
 // @import 'bootstrap/scss/tooltip';
 // @import 'bootstrap/scss/popover';
-// @import 'bootstrap/scss/carousel';
+ @import 'bootstrap/scss/carousel';
 // @import 'bootstrap/scss/spinners';
 // @import 'bootstrap/scss/offcanvas'; // requires transitions
 // @import 'bootstrap/scss/placeholders';
