Dropdown and Embed

--- a/src/scss/utilities/_carousel.scss
+++ b/src/scss/utilities/_carousel.scss
@@ -1,4 +1,5 @@
 .section-wrap {
      padding-top: 60px;
-     padding-bottom: 60px;   
+     padding-bottom: 60px; 
+     border: 1px solid rgb(47, 0, 255);  
 }
