Bootstrap example page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,3 +4,7 @@
 // Bootstrap
 @import 'bootstrap';
 
+@import './sections.scss/carousel';
+@import './layouts.scss/margins';
+@import './layouts.scss/buttons';
+
