Front Page 2 created

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,8 @@
 @import 'bootstrap';
 
 @import './sections.scss/carousel';
+@import './sections.scss/hero';
+@import './sections.scss/your-site-your-way';
 @import './layouts.scss/margins';
 @import './layouts.scss/buttons';
 
